--- a/akash.html
+++ b/akash.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my secound github repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-</body>
+    <h2> my secound github course</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia veritatis consequuntur ratione, repellendus in, alias, aliquid magni id nesciunt asperiores deserunt incidunt repellat temporibus commodi a corporis quos facere facilis?</p>
+
+    </body>
 </html>
